Test exceptions related to rest calls and reaching the end of hendelsesliste. Clean up test code